--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "AppSettings": {
-    "Token":"super secret key"
+    "Token": "super secret key"
   },
   "ConnectionStrings" : {
     "DefaultConnection": "Data Source=datingapp.db"
@@ -14,5 +14,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+  "CloudinarySettings": {
+    "CloudName": "dgqxfmofg", 
+    "ApiKey": "916412619933962", 
+    "ApiSecret": "93O-X3iUdF9cT2YBIscvZxMKzt8"
+  }
 }
